# aoc2022

./: .gitignore  LICENSE  Makefile  README.md  aoc.cabal  aoc2022.cabal  baseline.csv  docker-compose.yml
app/: Main.hs
ci/: run.sh
inputs/: 05.txt
outputs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
src/: Common.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Options.hs  Run.hs
src/Day1/: Common.hs  Part1.hs  Part2.hs
src/Day2/: Common.hs  Part1.hs  Part2.hs
src/Day3/: Common.hs  Part1.hs  Part2.hs
src/Day4/: Common.hs  Part1.hs  Part2.hs
src/Day5/: Common.hs  Part1.hs  Part2.hs
src/Day6/: Common.hs  Part1.hs  Part2.hs
test/: Benchmark.hs  Test.hs
