cabal-version:      3.0
name:               aoc
version:            0.1.0.0
synopsis:           Advent of Code 2022 solutions
homepage:           https://github.com/aspidites/aoc
license:            MIT
license-file:       LICENSE
author:             Edwin Marshall
maintainer:         emarshall85@gmail.com

-- A copyright notice.
-- copyright:
-- category:

extra-source-files: CHANGELOG.md

common shared-ghc-options
  ghc-options:
    -O2
    -Wall

common shared-depends 
  build-depends:    
      base
    , text
    , optparse-generic

common shared-language
  default-language: GHC2021
  default-extensions:
   ExplicitNamespaces 

library
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  exposed-modules:  
    Day1
    Day2
    Options
    Run

  other-modules:
    Day1.Common
    Day1.Part1
    Day1.Part2
    Day2.Common
    Day2.Part1
    Day2.Part2

  hs-source-dirs: src

executable aoc
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  main-is: Main.hs

  build-depends:
      aoc

  hs-source-dirs: app
  default-language: GHC2021

test-suite aoc-test
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: MyLibTest.hs
  build-depends:   
      aoc

benchmark aoc-benchmarks
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  type: exitcode-stdio-1.0
  main-is: test/Benchmark.hs
  build-depends:
      aoc
    , tasty-bench
  ghc-options:
    "-with-rtsopts=-A32m"
