cabal-version:      3.0
name:               aoc
version:            0.1.0.0
category:           Game
synopsis:           Advent of Code 2022 solutions
homepage:           https://github.com/aspidites/aoc
license:            MIT
license-file:       LICENSE
author:             Edwin Marshall
maintainer:         emarshall85@gmail.com
description:        My solutions to Advent of Code problems

-- A copyright notice.
-- copyright:
-- category:

extra-source-files: CHANGELOG.md

source-repository head
  type: gi
  location: https://github.com/aspidites/aoc2022

common shared-ghc-options
  ghc-options:
    -Wall 
    -fllvm 
    -fexcess-precision 
    -optc-O3 
    -optc-ffast-math

common shared-depends 
  build-depends:    
      base ^>= 4.17.0.0
    , split
    , aeson
    , optparse-generic
    , bytestring
    , directory
    , containers
    , bytestring-lexing
    , attoparsec

common shared-language
  default-language: GHC2021
  default-extensions:
   ExplicitNamespaces 
   GADTs

library
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  exposed-modules:  
    Common
    Day1
    Day1.Common
    Day1.Part1
    Day1.Part2
    Day2
    Day2.Common
    Day2.Part1
    Day2.Part2
    Day3
    Day3.Common
    Day3.Part1
    Day3.Part2
    Day4
    Day4.Common
    Day4.Part1
    Day4.Part2
    Day5
    Day5.Common
    Day5.Part1
    Day5.Part2
    Day6
    Day6.Common
    Day6.Part1
    Day6.Part2
    Options
    Run

  hs-source-dirs: src

executable aoc
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  main-is: Main.hs

  build-depends:
      aoc

  hs-source-dirs: app
  default-language: GHC2021
  ghc-options:
    -threaded

test-suite aoc-test
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:   
      aoc
    , tasty
    , tasty-hunit

benchmark aoc-benchmarks
  import:
      shared-depends
    , shared-ghc-options
    , shared-language

  type: exitcode-stdio-1.0
  main-is: test/Benchmark.hs
  build-depends:
      aoc
    , tasty-bench
  ghc-options:
    "-with-rtsopts=-A32m"
